--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,5 @@
       "Febalist\\Laravel\\Progress\\": "src/"
     }
   },
-  "require": {
-    "laravel/framework": "5.7.*|5.8.*"
-  }
+  "require": {}
 }
